fix header spacing

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -177,3 +177,9 @@ table + p{
 .column-two-thirds > h2{
 	margin-top: 0;
 }
+.heading-xlarge{
+	margin-bottom: .6em;
+}
+.lede{
+	margin-bottom: 2em;
+}
